assets/css/style.css
/* TEST AREA */








/* END TEST AREA */
@import url('https://fonts.googleapis.com/css?family=Josefin+Slab:300,400,600,700|Lato:300,400,700,900|Sacramento&display=swap');


/***************************** COLORS */

.navbar {
    background: rgb(30, 187, 163);
}

#navbarResponsive .active a {
    color: #7a3636;
}

#navbarResponsive li a {
    color: #c8d8d6;
    transition: all 0.35s ease-in-out;
    -moz-transition: all 0.35s ease-in-out;
    -webkit-transition: all 0.35s ease-in-out;
    -o-transition: all 0.35s ease-in-out;
}

#navbarResponsive li a:hover {
    color: #7a3636;
}

.section-headers {
    /* background-color: rgb(77, 77, 16);
    background-color: rgba(77, 77, 16, .2); */
    color: #000;
}

.hero-overlay {
    background: #000;
    background: rgba(0, 0, 0, 0.4);
}

footer .fab {
    color: #c8d8d6;
    transition: all 0.35s ease-in-out;
    -moz-transition: all 0.35s ease-in-out;
    -webkit-transition: all 0.35s ease-in-out;
    -o-transition: all 0.35s ease-in-out;
}

footer .fab:hover {
    color: #1ebba3;
}

.footer-top {
    background-color: rgb(122, 54, 54);
}

.footer-copyright {
    background-color: rgb(143, 78, 18);
    color: #c8d8d6;
}

.text-footer {
    color: #c8d8d6;
}

.overlay-text {
    color: #fafafa;
}

.first-rows {
    /* background-color: rgb(77, 77, 16);
    background-color: rgba(77, 77, 16, .2); */
    color: #000;
}

.btn-info {
    background-color: rgb(77, 77, 16);
    color: #fafafa;
    border: 0;
    border-radius: 0;
    transition: all 0.35s ease-in-out;
    -moz-transition: all 0.35s ease-in-out;
    -webkit-transition: all 0.35s ease-in-out;
    -o-transition: all 0.35s ease-in-out;
}

.btn-info:hover {
    background-color: rgb(77, 77, 16);
    background-color: rgba(77, 77, 16, .2);
    color: rgb(139, 69, 19);
}

.price {
    padding: 2rem;
    background-color: rgb(77, 77, 16);
    background-color: rgba(77, 77, 16, .2)
}

/***************************** FONTS */

body {
    font-family: "Lato", sans-serif;
    font-weight: 300;
}

h1 {
    font-family: "Sacramento", cursive;
    font-size: 6rem;
}

h2 {
    font-family: "Sacramento", cursive;
    font-size: 3rem;

}

h3 {
    font-family: "Josefin Slab", sans-serif;
    font-size: 1.9rem;
    font-weight: 400;
    text-transform: uppercase;
}

.navbar {
    text-transform: uppercase;
    font-weight: 700;
    letter-spacing: .2rem;
}

.blockquote {
    font-size: .9rem;
    font-weight: 400;
}

.col-descriptions {

    font-family: "Lato", sans-serif;
    text-align: justify;
    text-justify: auto;
}

footer .fab {
    font-size: 2.5rem;
}

.text-footer {
    letter-spacing: 1.5px;
}

.footer-copyright {
    font-size: .9rem;
    font-weight: 300;
}

.price {
    font-size: 1.3rem;

}

/***************************** POSITIONING, PADDING AND MARGIN */

body {
    overflow-x: hidden;
    padding: 0;
    margin: 0;
}

.hero-overlay {
    position: absolute;
    top: 25%;
    left: 0;
    right: 0;
    width: 100%;
    text-align: center;
}

.first-rows {
    padding-top: 100px;
}

footer .fab {
    margin: 2rem 1rem 0 1rem;
}

.footer-copyright p {
    margin: 0;
}

.footer-top {
    margin-top: 0;
    margin-bottom: 0;
    padding: 0;
}

.footer-text-cont {
    margin-top: 0;
    padding: 0;
}

.text-footer {
    margin: 0;
}

.footer-social {
    margin: 0;
}

.descriptions {
    margin: 1rem 0 1rem 0;
}

.map-responsive {
    overflow: hidden;
    padding-bottom: 50%;
    position: relative;
    height: 0;
}

.map-responsive iframe {
    left: 0;
    top: 0;
    height: 100%;
    width: 100%;
    position: absolute;
}

.section-titles {
    margin-top: 15px;
}


/***************************** CONTAINERS */

/***************************** VIDEO */

/***************************** IMAGES */

.navbar-brand img {
    height: 4rem;
}

.hero-image {
    /* Use "linear-gradient" to add a darken background effect to the image. This will make the text easier to read */
    background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("/assets/images/colle_2.JPG");
    height: 100vh;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
}

/***************************** FOOTER */

/***************************** MEDIA QUERIES */
@media (min-width: 767px) {
    body {
        font-size: 1.2rem;
    }

    .footer-text-cont {
        padding-left: 2rem;
    }

    footer .fab {
        margin-top: 1rem;
    }

    .navbar {
        font-size: 1.2rem;
        letter-spacing: .2rem;
    }

    .footer-copyright {
        font-size: 1.1rem;
    }

    .second-col {
        margin-left: 4rem;
    }

    .col-descriptions{
        font-size: 1.2rem;
    }
}

